@@ -1,4 +1,5 @@
 5.1
+ * Fix null value handling for static columns (CASSANDRA-18241)
  * Feature Flag for Accord Transactions (CASSANDRA-18195)
  * CEP-15: Multi-Partition Transaction CQL Support (Alpha) (CASSANDRA-17719)
  * CEP-15 (C*): Messaging and storage engine integration (CASSANDRA-17103)
